Add new Headers sent by move Items notification (#81)
---------

Signed-off-by: basseche <bassel.el-cheikh_externe@rte-france.com>